# open-ph-data-platform

./: .gitignore  Makefile  README.md  dbt_project.yml  foo.js  pyproject.toml
.dvc/: config
.github/workflows/: deploy.yml
_build/: landing.dvc  raw.dvc
_build/landing/psa/: PSGC-2Q-2025-Publication-Datafile.xlsx.dvc  metadata.json.dvc
_build/landing/psa/2024_census_data/: BARMM_1.xlsx.dvc  CALABARZON_0.xlsx.dvc  CAR_0.xlsx.dvc  Caraga_0.xlsx.dvc  MIMAROPA_1.xlsx.dvc  NCR_2.xlsx.dvc  NIR_0.xlsx.dvc  Region III_1.xlsx.dvc  Region II_1.xlsx.dvc  Region IX_1.xlsx.dvc  Region I_1.xlsx.dvc  Region VIII_0.xlsx.dvc  (+5 more)
dags/: ingest_province_data.py  parse_and_clean_barangay_population_data.py  psa_ingest.py  psa_website_ingest.py
dags/ingest/: ingest_province_data.py
dags/staging/: psa_website_staging.py
ingest/psa_website/: parse_barangay_census_data.py  psa_barangay_census_data.py  psa_geographical_codes.py
ingest/wikipedia/: province_data.py  wikipedia_city_municipality.py  wikipedia_province_data.py
ingestion/psa_website/: census_data.py  parse_barangay_census_data.py
ingestion/wikipedia/: scrape_city_data.py
scripts/: build.sh  clean.sh  migration.sql  startup.sql
src/opendata_ph/: airflow_utils.py  constants.py  duckdb.py  logger.py  metadata.py  wikipedia.py
transform/: dbt_project.yml
transform/models/: sources.yml
transform/models/final/: dim_barangay.sql  dim_city_municipality.sql  dim_province.sql  fct_population.sql  final_models.yml
transform/models/silver/: barangay_census_data.sql  silver_models.yml
transform/models/staging/: barangay_census_data.sql  staging_models.yml  wikipedia_province_data.sql
transform/profile/: profiles.yml
(+12 files in other folders)
